Fix br not working on mobile

--- a/themes/spectral/assets/css/main.css
+++ b/themes/spectral/assets/css/main.css
@@ -3948,9 +3948,7 @@ body.is-menu-visible #menu {
 		font-size: 1.25em;
 	}
 
-	#banner br {
-		display: none;
-	}
+	
 
 	#banner .more {
 		display: none;
